--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="Magnific-Popup/dist/jquery.magnific-popup.min.js?v=1.1.0"></script>
     <link rel="stylesheet" href="Magnific-Popup/dist/magnific-popup.css" />
     <script type="text/javascript">
